--- a/dotfiles/config/polybar/config
+++ b/dotfiles/config/polybar/config
@@ -101,11 +101,11 @@ menu-0-0-exec = systemctl poweroff
 menu-0-1 = reboot
 menu-0-1-exec = systemctl reboot
 menu-0-2 = suspend
-menu-0-2-exec = i3lock -i ~/Imágenes/lockscreen.png && systemctl suspend
+menu-0-2-exec = i3lock -i $HOME/Imágenes/lockscreen.png && systemctl suspend
 menu-0-3 = logout
 menu-0-3-exec = bspc quit
 menu-0-4 = lock screen
-menu-0-4-exec = i3lock
+menu-0-4-exec = i3lock -i $HOME/Imágenes/lockscreen.png
 menu-0-5 = cancel
 menu-0-5-foreground = ${colors.secondary}
 
