--- a/dotfiles/config/polybar/config
+++ b/dotfiles/config/polybar/config
@@ -30,6 +30,7 @@ module-margin-right = 2
 
 font-0 = fixed:pixelsize=10;1
 
+modules-left = xworkspaces
 modules-right = filesystem cpu memoryram memoryswap temperature xkeyboard network-wireless pulseaudio date menupower
 
 tray-position = right
@@ -151,6 +152,24 @@ label-layout = %layout%
 label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-background = ${colors.secondary}
+
+[module/xworkspaces]
+type = internal/xworkspaces
+enable-click = true
+format = <label-state>
+label-active = %name%
+label-active-foreground = #ffffff
+label-active-background = #3f3f3f
+label-active-padding = 4
+label-occupied = %name%
+label-occupied-padding = 2
+label-urgent = %name%
+label-urgent-foreground = #000000
+label-urgent-background = #bd2c40
+label-urgent-padding = 4
+label-empty = %name%
+label-empty-foreground = #55
+label-empty-padding = 2
 
 [settings]
 screenchange-reload = true
