--- a/dotfiles/config/polybar/config
+++ b/dotfiles/config/polybar/config
@@ -31,7 +31,7 @@ module-margin-right = 2
 font-0 = fixed:pixelsize=10;1
 
 modules-left = xworkspaces
-modules-right = filesystem cpu memoryram memoryswap temperature xkeyboard network-wireless pulseaudio date menupower
+modules-right = filesystem cpu memoryram memoryswap temperature pulseaudio network-wireless date menupower xkeyboard
 
 tray-position = right
 tray-padding = 2
@@ -59,7 +59,6 @@ interval = 1
 date = " %Y-%m-%d %a,"
 time = %H:%M
 
-format-prefix = date
 format-prefix-foreground = ${colors.foreground-alt}
 
 label = %date% %time%
@@ -122,7 +121,7 @@ label = %temperature-c%
 label-warn = %temperature-c%
 label-warn-foreground = ${colors.secondary}
 
-ramp-0 = temp
+ramp-0 = 
 ramp-foreground = ${colors.foreground-alt}
 
 [module/network-wireless]
@@ -136,15 +135,17 @@ label-disconnected-foreground = #66ffffff
 [module/pulseaudio]
 type = internal/pulseaudio
 interval = 5
+
+format-volume = <label-volume>
+label-volume = ♬ %percentage%%
+
 click-right = pavucontrol
 label-muted = muted
 label-muted-foreground = #66
 
 [module/xkeyboard]
 type = internal/xkeyboard
-blacklist-0 = num lock
 
-format-prefix = "keyboard "
 format-prefix-foreground = ${colors.foreground-alt}
 
 label-layout = %layout%
