--- a/dotfiles/config/polybar/config
+++ b/dotfiles/config/polybar/config
@@ -159,12 +159,12 @@ label-disconnected-foreground = ${colors.background-alt}
 
 [module/network-ethernet]
 inherit = module/network
-interface = enp2s0
+interface = ${env:INTERFACE_ETHERNET}
 label-connected = %ifname% connected
 
 [module/network-wireless]
 inherit = module/network
-interface = wlp3s0
+interface = ${env:INTERFACE_WIRELESS}
 label-connected = %ifname% %essid%
 
 [module/pulseaudio]
