--- a/dotfiles/config/polybar/config
+++ b/dotfiles/config/polybar/config
@@ -154,18 +154,22 @@ type = internal/network
 interval = 3.0
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %ifname% disconnected
+;label-disconnected = %ifname% disconnected
 label-disconnected-foreground = ${colors.background-alt}
 
 [module/network-ethernet]
 inherit = module/network
 interface = ${env:INTERFACE_ETHERNET}
-label-connected = %ifname% connected
+;label-connected = %ifname% connected
+label-connected = eth connected
+label-disconnected = eth disconnected
 
 [module/network-wireless]
 inherit = module/network
 interface = ${env:INTERFACE_WIRELESS}
-label-connected = %ifname% %essid%
+;label-connected = %ifname% %essid%
+label-connected = wlan connected
+label-disconnected = wlan disconnected
 
 [module/pulseaudio]
 type = internal/pulseaudio
