--- a/dotfiles/config/polybar/config
+++ b/dotfiles/config/polybar/config
@@ -75,7 +75,24 @@ type = internal/cpu
 interval = 2
 format-prefix = "cpu "
 format-prefix-foreground = ${colors.foreground-alt}
-label = %percentage-cores%
+format = <ramp-coreload>
+
+; Spacing between individual per-core ramps
+ramp-coreload-spacing = 1
+ramp-coreload-0 = 0X%
+ramp-coreload-1 = 1X%
+ramp-coreload-2 = 2X%
+ramp-coreload-3 = 3X%
+ramp-coreload-4 = 4X%
+ramp-coreload-5 = 5X%
+ramp-coreload-6 = 6X%
+ramp-coreload-7 = 7X%
+ramp-coreload-8 = 8X%
+ramp-coreload-9 = 9X%
+ramp-coreload-10 = 100%
+
+ramp-coreload-9-foreground = ${colors.alert}
+ramp-coreload-10-foreground = ${colors.alert}
 
 [module/date]
 type = internal/date
