--- a/dotfiles/config/i3status/config
+++ b/dotfiles/config/i3status/config
@@ -12,27 +12,30 @@ general {
         interval = 1
 }
 
-order += "ipv6"
+order += "volume master"
+order += "disk /"
+order += "cpu_usage"
+order += "memory"
 order += "wireless _first_"
 order += "ethernet _first_"
+order += "cpu_temperature 0"
 order += "battery all"
-order += "disk /"
-order += "load"
-order += "memory"
 order += "tztime local"
-
-wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
-}
-
-ethernet _first_ {
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
-}
 
 battery all {
         format = "%status %percentage %remaining"
+        format_down = ""
+}
+
+cpu_temperature 0 {
+        format = "%degrees ºC"
+        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input"
+        max_threshold = 75
+}
+
+cpu_usage {
+        format = "cpu (%usage) %cpu0 %cpu1 %cpu2 %cpu3"
+        max_threshold = 75
 }
 
 disk "/" {
@@ -42,16 +45,32 @@ disk "/" {
         threshold_type = percentage_avail
 }
 
-load {
-        format = "%1min"
+ethernet _first_ {
+        format_up = "eth"
+        format_down = "eth"
+        color_good = "#dfdfdf"
+        color_bad = "#555555"
 }
 
 memory {
-        format = "%used | %available"
-        threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
+        format = "mem %used/%total shared %shared"
+        threshold_critical = "1G"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%Y-%m-%d %a, %H:%M"
 }
+
+volume master {
+        format = "♪: %volume"
+        format_muted = "♪: muted (%volume)"
+        device = "default"
+}
+
+wireless _first_ {
+        format_up = "wlan"
+        format_down = "wlan"
+        color_good = "#dfdfdf"
+        color_bad = "#555555"
+}
+
