--- a/dotfiles/config/i3/config
+++ b/dotfiles/config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 9.5
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -180,3 +180,8 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+# Applications
+bindsym Control+Mod1+b exec protonmail-bridge
+bindsym Control+Mod1+f exec ~/Software/firefox/firefox/firefox
+bindsym Control+Mod1+s exec /usr/bin/subl
