--- a/dotfiles/config/i3/config
+++ b/dotfiles/config/i3/config
@@ -179,13 +179,13 @@ bar {
 # Applications
 # Mod1 = Alt key
 bindsym Control+Mod1+b exec protonmail-bridge
-bindsym Control+Mod1+e exec $HOME/Software/thunderbird/thunderbird/thunderbird
-bindsym Control+Mod1+f exec $HOME/Software/firefox/firefox/firefox
-bindsym Control+Mod1+k exec $HOME/Software/keepass/KeePassXC-2.6.6-x86_64.AppImage
-bindsym Control+Mod1+l exec $HOME/.config/i3lock/lockscreen
+bindsym Control+Mod1+e exec thunderbird
+bindsym Control+Mod1+f exec firefox
+bindsym Control+Mod1+k exec keepassxc
+bindsym Control+Mod1+l exec lockscreen
 # start rofi (a program launcher)
 bindsym Control+Mod1+r exec rofi -show drun
-bindsym Control+Mod1+s exec /usr/bin/subl
+bindsym Control+Mod1+s exec subl
 # keysym 0xffc1 = F4 key
-bindsym Mod1+0xffc1 exec ~/.config/rofi/powermenu/powermenu.sh
+bindsym Mod1+0xffc1 exec powermenu
 
