--- a/dotfiles/config/i3/config
+++ b/dotfiles/config/i3/config
@@ -36,6 +36,9 @@ exec --no-startup-id nm-applet
 # https://unix.stackexchange.com/questions/616862/arch-linux-notifications-not-working-in-i3wm-dunst-critical-cannot-open-x11
 exec --no-startup-id dunst
 
+# detect new devices
+exec --no-startup-id usb-monitor
+
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
