--- a/dotfiles/config/i3/config
+++ b/dotfiles/config/i3/config
@@ -55,7 +55,8 @@ bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle && $refresh_
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+#bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec st
 
 # kill focused window
 bindsym $mod+Shift+q kill
