--- a/dotfiles/config/tmux/.tmux.conf
+++ b/dotfiles/config/tmux/.tmux.conf
@@ -1,5 +1,9 @@
 # Save this file in ~
-# https://dev.to/brandonwallace/make-your-tmux-status-bar-100-better-with-bash-2fne
 
 # Status bar
+# https://dev.to/brandonwallace/make-your-tmux-status-bar-100-better-with-bash-2fne
 set -g status off
+
+# Pane dividing lines
+# https://unix.stackexchange.com/questions/141248/how-do-i-change-the-color-of-the-pane-dividing-lines-in-tmux
+set -g pane-active-border fg=#2b5c81
