bash_config: add start tmux

--- a/dotfiles/config/bash/.bash_config
+++ b/dotfiles/config/bash/.bash_config
@@ -16,3 +16,13 @@ PS1='[\u@\h \W]\$ '
 # https://stackoverflow.com/questions/15121181/terminal-emulator-or-shell-with-vim-like-commands
 set -o vi
 
+# https://unix.stackexchange.com/questions/43601/how-can-i-set-my-default-shell-to-start-up-tmux
+# command -v tmux &> /dev/null: check command existence
+# [ -n "$PS1" ]: check for interactive shell
+# [[ ! "$TERM" =~ screen ]]: check if does not contain `screen`
+# [[ ! "$TERM" =~ tmux ]]: check if does not contain `tmux`
+# [ -z "$TMUX" ]: check if it is empty
+if command -v tmux &> /dev/null && [ -n "$PS1" ] && [[ ! "$TERM" =~ screen ]] && [[ ! "$TERM" =~ tmux ]] && [ -z "$TMUX" ]; then
+  exec tmux
+fi
+
