--- a/dotfiles/config/tmux/.tmux.conf
+++ b/dotfiles/config/tmux/.tmux.conf
@@ -7,3 +7,7 @@ set -g status off
 # Pane dividing lines
 # https://unix.stackexchange.com/questions/141248/how-do-i-change-the-color-of-the-pane-dividing-lines-in-tmux
 set -g pane-active-border fg=#2b5c81
+
+# Add vi scroll keybindings
+# https://stackoverflow.com/questions/51639540/tmux-scroll-mode-vim-keybindings#51639642
+set-window-option -g mode-keys vi
