Change bash_config comment

--- a/dotfiles/config/bash/.bash_config
+++ b/dotfiles/config/bash/.bash_config
@@ -9,7 +9,7 @@
 # https://wiki.archlinux.org/title/Git
 source ~/.git-completion.bash
 
-# Command line
+# terminal
 # https://wiki.archlinux.org/title/Bash/Prompt_customization
 PS1='[\u@\h \W]\$ '
 
