--- a/dotfiles/config/tmux/.tmux.conf
+++ b/dotfiles/config/tmux/.tmux.conf
@@ -11,3 +11,8 @@ set -g pane-active-border fg=#2b5c81
 # Add vi scroll keybindings
 # https://stackoverflow.com/questions/51639540/tmux-scroll-mode-vim-keybindings#51639642
 set-window-option -g mode-keys vi
+
+# New pane in current directory
+# https://unix.stackexchange.com/questions/101949/new-tmux-panes-go-to-the-same-directory-as-the-current-pane-new-tmux-windows-go/109255#109255
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
