--- a/dotfiles/config/bash/.bash_config
+++ b/dotfiles/config/bash/.bash_config
@@ -29,9 +29,8 @@ then
     log ok
 
     log
-    TERMINAL_TO_MODIFY=st-256color
-    log "2) Check if it is the desired terminal TERM==$TERMINAL_TO_MODIFY. TERM=$TERM"
-    if [[ "$TERM" == "$TERMINAL_TO_MODIFY" ]];
+    log "2) Check if it is the desired terminal TERM=$TERM"
+    if [[ "$TERM" == "st-256color" ]] || [[ "$TERM" == "xterm-256color" ]];
     then
         log ok
 
