--- a/dotfiles/config/bash/.bash_config
+++ b/dotfiles/config/bash/.bash_config
@@ -66,3 +66,5 @@ else
     log ko
 fi
 
+# https://stackoverflow.com/questions/16904658/node-version-manager-install-nvm-command-not-found#17707224
+source ~/.nvm/nvm.sh
