feat(tmux): config windows index

--- a/dotfiles/config/tmux/.tmux.conf
+++ b/dotfiles/config/tmux/.tmux.conf
@@ -4,6 +4,10 @@
 # https://dev.to/brandonwallace/make-your-tmux-status-bar-100-better-with-bash-2fne
 set -g status off
 
+# Windows
+# Tutorial https://tmuxcheatsheet.com/
+set -g base-index 1 # To start the windows index in 1
+
 # Pane dividing lines
 # https://unix.stackexchange.com/questions/141248/how-do-i-change-the-color-of-the-pane-dividing-lines-in-tmux
 set -g pane-active-border fg=#2b5c81
