feat(tmux): add comments

--- a/dotfiles/config/tmux/.tmux.conf
+++ b/dotfiles/config/tmux/.tmux.conf
@@ -5,7 +5,11 @@
 set -g status off
 
 # Windows
-# Tutorial https://tmuxcheatsheet.com/
+# [Tutorial](https://tmuxcheatsheet.com)
+# Show all windows: `ctrl + b` `w`
+# Create window: `ctrl + b` `c`
+# Change to other: `ctrl + b` `1` ... `9 (by number) `n` (next) `p` (previous)
+# Kill current window: `ctrl + b` `&`
 set -g base-index 1 # To start the windows index in 1
 
 # Pane dividing lines
