feat(tmux): add select and copy as in vim

--- a/dotfiles/config/tmux/.tmux.conf
+++ b/dotfiles/config/tmux/.tmux.conf
@@ -1,5 +1,7 @@
 # Save this file in ~
 
+# Copy mode: `ctrl` `]`
+
 # Status bar
 # https://dev.to/brandonwallace/make-your-tmux-status-bar-100-better-with-bash-2fne
 set -g status off
@@ -16,9 +18,17 @@ set -g base-index 1 # To start the windows index in 1
 # https://unix.stackexchange.com/questions/141248/how-do-i-change-the-color-of-the-pane-dividing-lines-in-tmux
 set -g pane-active-border fg=#2b5c81
 
+# Vi
 # Add vi scroll keybindings
 # https://stackoverflow.com/questions/51639540/tmux-scroll-mode-vim-keybindings#51639642
 set-window-option -g mode-keys vi
+# Copy / paste
+# https://frontendmasters.github.io/dev-prod-2/lessons/navigation/tmux
+# Use v to trigger selection
+bind -T copy-mode-vi v send-keys -X begin-selection
+# Use y to yank current selection and save in the clipboard too
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+# Paste: copy mode and `cntrl` `]` or `cntrl shift v` as the copy is configured to use the clipboard too.
 
 # New pane in current directory
 # https://unix.stackexchange.com/questions/101949/new-tmux-panes-go-to-the-same-directory-as-the-current-pane-new-tmux-windows-go/109255#109255
