feat(tmux): add reload

--- a/dotfiles/config/tmux/.tmux.conf
+++ b/dotfiles/config/tmux/.tmux.conf
@@ -35,3 +35,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 bind  c  new-window      -c "#{pane_current_path}"
 bind  %  split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
+
+# Reload: `cntrl b` `r`
+# https://frontendmasters.github.io/dev-prod-2/lessons/navigation/tmux
+bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
