feat(gitconfig): comment delta

--- a/scripts/.config/.gitconfig
+++ b/scripts/.config/.gitconfig
@@ -5,21 +5,21 @@
     path = ~/.gitconfig-job
 [merge]
     tool = meld
-    conflictstyle = zdiff3  # delta config
+    #conflictstyle = zdiff3  # delta config
 [init]
     defaultBranch = main
 [core]
     editor = vi
-    pager = delta
+    #pager = delta
 [pull]
     rebase = false
-[interactive]
-    diffFilter = delta --color-only
+#[interactive]
+#    diffFilter = delta --color-only
 # https://www.youtube.com/watch?v=91p1Fp7Db5c
 # https://github.com/dandavison/delta?tab=readme-ov-file
 # https://github.com/dandavison/delta/issues/678#issuecomment-902994979
-[delta]
-    true-color = always
-    navigate = true  # use n and N to move between diff sections
-    dark = true      # or light = true, or omit for auto-detection
-    line-numbers = true
+#[delta]
+#    true-color = always
+#    navigate = true  # use n and N to move between diff sections
+#    dark = true      # or light = true, or omit for auto-detection
+#    line-numbers = true
